--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,9 @@
 $width: 850px;
-$textColor: #333;
+
+$brand: var(--text, #121e2b);
+$text: var(--text, #eee);
+$bg100: var(--bg, #151515);
+$bg200: var(--bg, #1a1a1a);
 
 @mixin notMobile {
   @media (min-width: 601px) {
