--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,7 @@
 $width: 850px;
 
+$transitions: background 0.35s, color 0.35s;
+
 $brand: var(--text, #121e2b);
 $text: var(--text, #eee);
 $bg100: var(--bg, #151515);
