--- a/src/variables.scss
+++ b/src/variables.scss
@@ -9,7 +9,7 @@ $bg50Mobile: var(--bg50Mobile, transparent);
 $bg100: var(--bg100, #151515);
 $bg200: var(--bg200, #1a1a1a);
 $border: var(--border, #2a2a2a);
-$green: var(--green, #3daa3e);
+$green: #3daa3e;
 
 $button: var(--button, #2f2f2f);
 $buttonHover: var(--button, lighten(#2f2f2f, 2.5%));
