--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 $width: 850px;
 
 $transitions:
@@ -6,7 +8,7 @@ $transitions:
 
 $text400: var(--text400, #eee);
 $text300: var(--text300, #bbb);
-$bg50Trans: var(--bg50Trans, transparentize(#111, 0.25));
+$bg50Trans: var(--bg50Trans, color.adjust(#111, $alpha: -0.25));
 $bg50Mobile: var(--bg50Mobile, transparent);
 $bg100: var(--bg100, #151515);
 $bg200: var(--bg200, #1a1a1a);
@@ -14,8 +16,8 @@ $border: var(--border, #2a2a2a);
 $green: #43d044;
 
 $button: var(--button, #2f2f2f);
-$buttonHover: var(--button, lighten(#2f2f2f, 2.5%));
-$buttonClick: var(--button, darken(#2f2f2f, 2.5%));
+$buttonHover: var(--button, color.adjust(#2f2f2f, $lightness: 2.5%));
+$buttonClick: var(--button, color.adjust(#2f2f2f, $lightness: -2.5%));
 
 @mixin notMobile {
   @media (min-width: 601px) {
