--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,7 +4,9 @@ $width: 850px;
 
 $transitions:
   background 0.35s,
-  color 0.35s;
+  color 0.35s,
+  stroke 0.35s,
+  fill 0.35s;
 
 $text400: var(--text400, #eee);
 $text300: var(--text300, #bbb);
